crates/accelbyte-ags-cli/tests/snapshot/snapshots/ags__frontend__terminal__fullscreen__nav__tests__snapshot_nav_json_edit_tree.snap
---
source: crates/accelbyte-ags-cli/src/frontend/terminal/fullscreen/nav.rs
expression: nav_to_text(&phase)
---
┌ Navigation ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [↑↓] move · [→] expand · [Enter] edit · [+/−] add/remove entry · [Ctrl-R]   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
