crates/accelbyte-ags-cli/tests/snapshot/snapshots/ags__frontend__terminal__fullscreen__nav__tests__snapshot_nav_loading.snap
---
source: crates/accelbyte-ags-cli/src/frontend/terminal/fullscreen/nav.rs
expression: loading_to_text()
---
┌ Navigation ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [Esc] cancel                                                                │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
