crates/accelbyte-ags-cli/tests/snapshot/snapshots/ags__frontend__terminal__fullscreen__nav__tests__snapshot_nav_running.snap
---
source: crates/accelbyte-ags-cli/src/frontend/terminal/fullscreen/nav.rs
expression: nav_to_text(&running_phase())
---
┌ Navigation ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  working…                                                                    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
